--- a/spacex/5_jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/spacex/5_jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -509,11 +509,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>First_succ_landing</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>01/08/2018</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('01/08/2018',)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT min(Date) as \"Date_First_Successful_landing_in_ground_pad\" FROM SPACEXTBL WHERE \"Landing_Outcome\" = \"Success (ground pad)\";"
+    "%sql SELECT min(Date) as \"First_succ_landing\" FROM SPACEXTBL WHERE \"Landing_Outcome\" = \"Success (ground pad)\";"
    ]
   },
   {
@@ -527,10 +562,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>PAYLOAD_MASS__KG_</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 FT B1022</td>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>4696.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT B1026</td>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>4600.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT  B1021.2</td>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>5300.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT  B1031.2</td>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>5200.0</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 FT B1022', 'Success (drone ship)', 4696.0),\n",
+       " ('F9 FT B1026', 'Success (drone ship)', 4600.0),\n",
+       " ('F9 FT  B1021.2', 'Success (drone ship)', 5300.0),\n",
+       " ('F9 FT  B1031.2', 'Success (drone ship)', 5200.0)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT \"Booster_Version\",\"Landing_Outcome\", \"PAYLOAD_MASS__KG_\" FROM SPACEXTBL WHERE \"Landing_Outcome\" = \"Success (drone ship)\" AND \"PAYLOAD_MASS__KG_\" > 4000 AND \"PAYLOAD_MASS__KG_\" < 6000;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -546,10 +640,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Mission_Outcome</th>\n",
+       "            <th>COUNT(*)</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>None</td>\n",
+       "            <td>898</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (in flight)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success</td>\n",
+       "            <td>98</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (payload status unclear)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(None, 898),\n",
+       " ('Failure (in flight)', 1),\n",
+       " ('Success', 98),\n",
+       " ('Success ', 1),\n",
+       " ('Success (payload status unclear)', 1)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT \"Mission_Outcome\" , COUNT(*) FROM SPACEXTBL GROUP BY \"Mission_Outcome\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -564,10 +717,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1056.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.2 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1058.3 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.7 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 B5 B1048.4',),\n",
+       " ('F9 B5 B1049.4',),\n",
+       " ('F9 B5 B1051.3',),\n",
+       " ('F9 B5 B1056.4',),\n",
+       " ('F9 B5 B1048.5',),\n",
+       " ('F9 B5 B1051.4',),\n",
+       " ('F9 B5 B1049.5',),\n",
+       " ('F9 B5 B1060.2 ',),\n",
+       " ('F9 B5 B1058.3 ',),\n",
+       " ('F9 B5 B1051.6',),\n",
+       " ('F9 B5 B1060.3',),\n",
+       " ('F9 B5 B1049.7 ',)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT \"Booster_Version\" FROM SPACEXTBL WHERE PAYLOAD_MASS__KG_  = (SELECT MAX(PAYLOAD_MASS__KG_) FROM SPACEXTBL);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -583,10 +817,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>months</th>\n",
+       "            <th>year</th>\n",
+       "            <th>Booster_Version</th>\n",
+       "            <th>Launch_Site</th>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>10</td>\n",
+       "            <td>2015</td>\n",
+       "            <td>F9 v1.1 B1012</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>04</td>\n",
+       "            <td>2015</td>\n",
+       "            <td>F9 v1.1 B1015</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('10', '2015', 'F9 v1.1 B1012', 'CCAFS LC-40', 'Failure (drone ship)'),\n",
+       " ('04', '2015', 'F9 v1.1 B1015', 'CCAFS LC-40', 'Failure (drone ship)')]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT substr(Date, 4, 2) as months,substr(Date,7,4) as year, \"Booster_Version\",\"Launch_Site\", \"Landing_Outcome\" FROM SPACEXTBL WHERE substr(Date,7,4)='2015' AND \"Landing_Outcome\" =\"Failure (drone ship)\";"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -602,10 +889,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Date</th>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>08/07/2018</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>20</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10/08/2012</td>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>9</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>04/08/2016</td>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>8</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>18/07/2016</td>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>14/04/2015</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>12/05/2018</td>\n",
+       "            <td>Failure</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>06/04/2010</td>\n",
+       "            <td>Failure (parachute)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>18/04/2014</td>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>08/06/2019</td>\n",
+       "            <td>No attempt </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('08/07/2018', 'Success', 20),\n",
+       " ('10/08/2012', 'No attempt', 9),\n",
+       " ('04/08/2016', 'Success (drone ship)', 8),\n",
+       " ('18/07/2016', 'Success (ground pad)', 7),\n",
+       " ('14/04/2015', 'Failure (drone ship)', 3),\n",
+       " ('12/05/2018', 'Failure', 3),\n",
+       " ('06/04/2010', 'Failure (parachute)', 2),\n",
+       " ('18/04/2014', 'Controlled (ocean)', 2),\n",
+       " ('08/06/2019', 'No attempt ', 1)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT \"Date\", \"Landing_Outcome\", COUNT(\"Landing_Outcome\") as count FROM SPACEXTBL \\\n",
+    "   WHERE \"Date\" BETWEEN \"04/06/2010\" AND \"20/03/2017\" \\\n",
+    "    GROUP BY \"Landing_Outcome\" \\\n",
+    "    ORDER BY COUNT(\"Landing_Outcome\") DESC;"
+   ]
   },
   {
    "cell_type": "markdown",
